Tweak Dropzone help text and make sure it's visible all the time

--- a/client/templates/rentalApplication/rentalApplication.styl
+++ b/client/templates/rentalApplication/rentalApplication.styl
@@ -1,10 +1,13 @@
 #rental-application-wrapper
+
   .application-dates
     margin-top 25px
   .dropzone
     min-height 0
     border none
     padding 0
+  .dropzone.dz-started .dz-message
+    display block
 
   table
     td
